Fix SecureOriginWhiteListTest.UnsafelyTreatInsecureOriginAsSecure to not leak test state

SecureOriginWhiteListTest.UnsafelyTreatInsecureOriginAsSecure currently marks
2 insecure origins as secure. This state leaks to other tests such that those
origins are treated as secure in those tests. This CL cleans up the state by
resetting SchemeAndOriginWhitelist after the test.

BUG=629499

Review-Url: https://codereview.chromium.org/2157363004
Cr-Commit-Position: refs/heads/master@{#406733}

Former-commit-id: d0dfe00f7e138a1f9221e8865fffe3b3a859c92f